syntax = "proto3";
package rarimo.rarimocore.tokenmanager;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "tokenmanager/params.proto";
import "tokenmanager/item.proto";
import "tokenmanager/collection.proto";
// this line is used by starport scaffolding # 1

option go_package = "gitlab.com/rarimo/rarimo-core/x/tokenmanager/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/rarimo/rarimo-core/tokenmanager/params";
  }
  // Queries a Item by index.
  rpc Item(QueryGetItemRequest) returns (QueryGetItemResponse) {
    option (google.api.http).get = "/rarimo/rarimo-core/tokenmanager/item/{chain}";
  }

  // Queries a list of Item entries.
  rpc ItemAll(QueryAllItemRequest) returns (QueryAllItemResponse) {
    option (google.api.http).get = "/rarimo/rarimo-core/tokenmanager/item";
  }

  rpc Collection(QueryGetCollectionRequest) returns (QueryGetCollectionResponse) {
    option (google.api.http).get = "/rarimo/rarimo-core/tokenmanager/collection/{index}";
  }

  rpc CollectionAll(QueryAllCollectionRequest) returns (QueryAllCollectionResponse) {
    option (google.api.http).get = "/rarimo/rarimo-core/tokenmanager/collection";
  }

  rpc CollectionByNetworkParams(QueryGetCollectionByNetworkParamsRequest) returns (QueryGetCollectionByNetworkParamsResponse) {
    option (google.api.http).get = "/rarimo/rarimo-core/tokenmanager/collection/{network}/{address}";
  }

  // this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetItemRequest {
  string tokenAddress = 1;
  string tokenId = 2;
  string chain = 3;
}

message QueryGetItemResponse {
  Item item = 1 [(gogoproto.nullable) = false];
}

message QueryAllItemRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

message QueryAllItemResponse {
  repeated Item item = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetCollectionRequest {
  string index = 1;
}

message QueryGetCollectionResponse {
  CollectionInfo collection = 1 [(gogoproto.nullable) = false];
}

message QueryAllCollectionRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllCollectionResponse {
  repeated CollectionInfo collection = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetCollectionByNetworkParamsRequest {
  string network = 1;
  string address = 2;
}

message QueryGetCollectionByNetworkParamsResponse {
  CollectionInfo collection = 1 [(gogoproto.nullable) = false];
}

// this line is used by starport scaffolding # 3
